--- a/research/ssd_mobilenet_v1_pets.config
+++ b/research/ssd_mobilenet_v1_pets.config
@@ -176,7 +176,7 @@ train_input_reader: {
   tf_record_input_reader {
     input_path: "/data/minidolly/my-objectdetection/pet_train.record"
   }
-  label_map_path: "/data/minidolly/my-objectdetection/pet_label_map.pbtxt"
+  label_map_path: "/data/minidolly/my-objectdetection/labels_items.txt"
 }
 
 eval_config: {
@@ -190,7 +190,7 @@ eval_input_reader: {
   tf_record_input_reader {
     input_path: "/data/minidolly/my-objectdetection/pet_val.record"
   }
-  label_map_path: "/data/minidolly/my-objectdetection/pet_label_map.pbtxt"
+  label_map_path: "/data/minidolly/my-objectdetection/labels_items.txt"
   shuffle: false
   num_readers: 1
 }
